deleted carrot from about me, fixed spacing, added links

--- a/style.css
+++ b/style.css
@@ -131,5 +131,5 @@ p {
 }
 
 .target {
-  margin: 5px; 
+  margin: 3px; 
 }
